--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Avengers Character Search</h1>
+    <input type="text" id="searchInput" placeholder="Enter character name">
     <button id="searchButton">Search</button>
+    <div id="result"></div>
 </body>
 </html>
